--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -4,41 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+     <link rel="stylesheet" href="/allcss.css">
 </head>
-<style>
-    body{
-        padding-top: 20vh;
-        background-color: #4070f4;
-    }
-    .container{
-        margin-top: 200px;
-        margin: auto;
-        width: 50vh;
-        height: 50vh;
-        text-align: center;
-        display: grid;
-        color: rgb(0, 0, 0);
-        background-color: rgb(208, 208, 208);
-        border-radius: 5vh;
-        align-items: center;
-    }
-    .container h1{
-        margin: 0px auto 80px auto;
-        align-items: center;
-        font-size: 10vh;
-
-    }
-    a{
-        text-decoration: none;
-    }
-</style>
 <body>
-    <div class="container">
-        <h1>
-            Welcome Boss.
-        </h1>
-        <label for="">New User</label><a th:href="@{registration}">Register here</a>
-        <label for="">Alredy have an account</label><a th:href="@{login}">login here</a>
+    <div class="main">
+        welcome
+        <a class="register" href="">register</a>
+        <a class="login" th:href="@{/login}">login</a>
+        <a class="logout" href="">logout</a>
+        <a href="">view profile</a>
+        <a href="">view all users</a>
+    </div>
+    <div class="second">
+        <div class="wrapper wrapper1 wrapper11">
+            <h2>Registration</h2>
+            <form th:action="@{/registration}" th:method="@{post}" th:object="${user}">
+              <div class="input-box">
+                <input type="text" placeholder="Enter your name" required th:field="*{name}">
+              </div>
+              <div class="input-box">
+                <input type="text" placeholder="Enter your email" required th:field="*{userName}">
+              </div>
+              <div class="input-box">
+                <input type="password" placeholder="Create password" required th:field="*{password}">
+              </div>
+              <div class="input-box">
+                <input type="password" placeholder="Confirm password" required>
+              </div>
+              <div class="policy">
+                <input type="checkbox">
+                <h3>I accept all terms & condition</h3>
+              </div>
+              <div class="input-box button">
+                <input type="Submit" value="Register Now">
+              </div>
+              <div class="text">
+                <h3>Already have an account? <a th:href="@{/login}">Login now</a></h3>
+              </div>
+            </form>
+        </div>
+
+
     </div>
 </body>
 </html>
